# poetry-selenium-demo

./: .gitignore  README.md  pyproject.toml
petco_demo/: login.py
tests/: first.py
